--- a/TLHFaceTrack/Properties/Resources.resx
+++ b/TLHFaceTrack/Properties/Resources.resx
@@ -117,6 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Icon_Start" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Icon_Start.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Icon_Stop" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Icon_Stop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Res_Error_Msg" xml:space="preserve">
     <value>Unable to start camera</value>
   </data>
